--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-	--breakpoint-xs: 26.5rem;
-	--breakpoint-xm: 38rem;
-	--breakpoint-lx: 68.7rem;
+	--breakpoint-xs: 26.5rem; /* 424px */
+	--breakpoint-xm: 38rem; /* 608px */
+	--breakpoint-lx: 68.7rem; /* 1099px */
 }
